--- a/ias-perl-script-infra/changelog
+++ b/ias-perl-script-infra/changelog
@@ -1,3 +1,9 @@
+ias-perl-script-infra 1.6.1-0 noarch; urgency=low
+
+	* Fixes to comments in code about "dev" vs "prod"
+
+ -- Martin VanWinkle mvanwinkle@ias.edu  Tue, 05 Dec 2017 08:43:23 -0500
+
 ias-perl-script-infra 1.6.0-0 noarch; urgency=low
 
 	* Make fixes, and moving to git.
